--- a/themes/montana/sass/local.sass
+++ b/themes/montana/sass/local.sass
@@ -1,4 +1,18 @@
+// General
+
+.label
+	text-transform: uppercase
+	font-size: .8em
+
+
+
+
 // Home
+
+h2.area_title
+	font-size: 1.8em
+	text-align: center
+	margin: 1.5em 0 .5em
 
 .dropdown
 	margin: 1em
@@ -32,7 +46,3 @@
 			vertical-align: middle
 			display: table-cell
 			height: 6rem
-
-.label
-	text-transform: uppercase
-	font-size: .8em
