--- a/themes/montana/sass/modules.sass
+++ b/themes/montana/sass/modules.sass
@@ -1,3 +1,14 @@
+// General
+
+.label
+	text-transform: uppercase
+	font-size: .8em
+
+
+
+
+// Home
+
 .slide
 	position: relative
 	> img
@@ -8,7 +19,7 @@
 	background: $white
 	border: 1px solid
 	display: block
-	min-width: 25em
+	min-width: 20em
 	position: absolute
 	margin: 0 1em
 	bottom: 1em
