--- a/themes/montana/sass/setup.sass
+++ b/themes/montana/sass/setup.sass
@@ -18,6 +18,10 @@ body
 	// overflow: scroll
 	// overflow-x: hidden
 
+a
+	text-decoration: none
+
+
 #wrapper > header
 	background: $black
 	padding: 2em
