Markup en Home (collecciones, esta semana, proximamente)

--- a/themes/montana/sass/local.sass
+++ b/themes/montana/sass/local.sass
@@ -46,3 +46,24 @@ h2.area_title
 			vertical-align: middle
 			display: table-cell
 			height: 6rem
+
+
+
+.collections
+	.controls
+		background: $white
+		border: 0.1rem solid $black
+		overflow: auto
+		padding: .5em
+		margin: 1em 1em 0 1em
+		ul > li
+			border: .1rem solid
+			display: inline
+			float: left
+			margin: .5em
+			padding: .5em .75em
+	.details_container
+		background: $black
+		color: white
+		margin: 0 1em
+		padding: 1em
