--- a/themes/montana/css/index.css
+++ b/themes/montana/css/index.css
@@ -66,6 +66,7 @@ body {
   color: #1d1d1d; }
 
 a {
+  color: inherit;
   text-decoration: none; }
 
 #wrapper > header {
@@ -98,6 +99,16 @@ a#nav_toggle_button {
   text-transform: uppercase;
   font-size: 0.8em; }
 
+.actions_tray {
+  text-align: center; }
+
+a.button {
+  display: inline-block;
+  background: #1d1d1d;
+  color: white;
+  font-size: 1.2em;
+  padding: 0.5em 1em; }
+
 .slide {
   position: relative; }
   .slide > img {
@@ -123,8 +134,7 @@ a#nav_toggle_button {
     font-size: 0.8em;
     padding: 0.25em 0.5em; }
   .details.box h2 {
-    font-size: 2.4em;
-    margin-bottom: 1em; }
+    font-size: 2.4em; }
   .details.box .status_label {
     position: absolute;
     bottom: 1em;
@@ -139,9 +149,9 @@ a#nav_toggle_button {
   padding: 1.5rem 1rem 1.5rem 3rem;
   float: left; }
   .card.twos {
-    width: 100%; }
+    width: 100vw; }
   .card.fours {
-    width: 50%; }
+    width: 50vw; }
   .card img {
     width: 100%;
     display: block; }
@@ -157,6 +167,8 @@ a#nav_toggle_button {
     .card .details.box .parent_label {
       top: inherit;
       bottom: -1em; }
+    .card .details.box h2 {
+      margin-bottom: 1em; }
   .card .img_container {
     position: relative;
     right: -1em;
@@ -209,3 +221,21 @@ h2.area_title {
       vertical-align: middle;
       display: table-cell;
       height: 6rem; }
+
+.collections .controls {
+  background: white;
+  border: 0.1rem solid #1d1d1d;
+  overflow: auto;
+  padding: 0.5em;
+  margin: 1em 1em 0 1em; }
+  .collections .controls ul > li {
+    border: 0.1rem solid;
+    display: inline;
+    float: left;
+    margin: 0.5em;
+    padding: 0.5em 0.75em; }
+.collections .details_container {
+  background: #1d1d1d;
+  color: white;
+  margin: 0 1em;
+  padding: 1em; }
