--- a/themes/montana/sass/modules.sass
+++ b/themes/montana/sass/modules.sass
@@ -4,6 +4,15 @@
 	text-transform: uppercase
 	font-size: .8em
 
+.actions_tray
+	text-align: center
+
+a.button
+	display: inline-block
+	background: $black
+	color: $white
+	font-size: 1.2em
+	padding: .5em 1em
 
 
 
@@ -35,7 +44,6 @@
 		padding: .25em .5em
 	h2
 		font-size: 2.4em
-		margin-bottom: 1em
 	.status_label
 		position: absolute
 		bottom: 1em
@@ -49,13 +57,13 @@
 	padding: 1.5rem 1rem 1.5rem 3rem
 	float: left
 	&.twos
-		width: 100%
+		width: 100vw
 		// .details.box
 		// 	margin-top: 9em
 		// img
 		// 	top: -9em
 	&.fours
-		width: 50%
+		width: 50vw
 	img
 		width: 100%
 		display: block
@@ -71,6 +79,8 @@
 		.parent_label
 			top: inherit
 			bottom: -1em
+		h2
+			margin-bottom: 1em
 	.img_container
 		position: relative
 		right: -1em
