Footer stable mobile

--- a/themes/montana/css/index.css
+++ b/themes/montana/css/index.css
@@ -95,6 +95,43 @@ a#nav_toggle_button {
     width: 100%;
     display: block; }
 
+footer .social {
+  background-color: #161616;
+  text-align: center;
+  padding-top: 8em;
+  background-image: url(http://placehold.it/120x50&text=CONARTE);
+  background-repeat: no-repeat;
+  background-position: center top 3rem; }
+  footer .social input {
+    -webkit-appearance: none;
+    padding: 1em 1.5em;
+    font-size: initial;
+    border: none; }
+  footer .social form {
+    background: yellow;
+    display: inline-block;
+    border-radius: 0.4rem;
+    overflow: hidden;
+    font-size: 0rem; }
+  footer .social li {
+    display: inline-block;
+    margin: 2em 1em; }
+
+.sitemap {
+  background: #1d1d1d;
+  color: #ababab;
+  padding: 2em;
+  text-align: center; }
+  .sitemap > ul, .sitemap #copyright {
+    width: 50%;
+    float: left;
+    text-align: left;
+    font-size: 0.8em;
+    line-height: 1.6em; }
+  .sitemap a#logo_nl {
+    margin-top: 3em;
+    display: inline-block; }
+
 .label {
   text-transform: uppercase;
   font-size: 0.8em; }
