--- a/themes/montana/sass/setup.sass
+++ b/themes/montana/sass/setup.sass
@@ -51,3 +51,44 @@ a#nav_toggle_button
 		border-top: .25em solid $white
 		width: 100%
 		display: block
+
+
+
+
+footer
+	.social
+		background-color: $darkgray
+		text-align: center
+		padding-top: 8em
+		background-image: url(http://placehold.it/120x50&text=CONARTE)
+		background-repeat: no-repeat
+		background-position: center top 3rem
+		input
+			-webkit-appearance: none
+			padding: 1em 1.5em
+			font-size: initial
+			border: none
+		form
+			background: yellow
+			display: inline-block
+			border-radius: .4rem
+			overflow: hidden
+			font-size: 0rem
+		li
+			display: inline-block
+			margin: 2em 1em
+
+.sitemap
+	background: $black
+	color: $lightgray
+	padding: 2em
+	text-align: center
+	> ul, #copyright
+		width: 50%
+		float: left
+		text-align: left
+		font-size: .8em
+		line-height: 1.6em
+	a#logo_nl
+		margin-top: 3em
+		display: inline-block
