--- a/themes/montana/sass/variables.sass
+++ b/themes/montana/sass/variables.sass
@@ -1,7 +1,8 @@
 $black: #1d1d1d
+$whitegray: #f7f7f7
 $gray: #818181
 $lightgray: #ababab
-$whitegray: #f7f7f7
+$darkgray: #161616
 $white: white
 // $darkbrown: #3E3B30
 // $oxford: #374A6B
