--- a/themes/montana/sass/modules.sass
+++ b/themes/montana/sass/modules.sass
@@ -17,12 +17,22 @@ a.button
 
 
 // Home
-
-.slide
+.slider
 	position: relative
-	> img
-		max-width: 100%
-		min-height: 20em
+	z-index: 0
+	.slide
+		position: relative
+		height: 40em
+		> img
+			max-width: 100%
+			min-height: 20em
+		.bg_img
+			width: 100%
+			height: 60em
+			background-size: cover
+			background-position: center
+			position: relative
+
 
 .details.box
 	background: $white
@@ -52,6 +62,7 @@ a.button
 .deck
 	overflow: auto
 	padding-top: 2em
+
 .card
 	position: relative
 	padding: 1.5rem 1rem 1.5rem 3rem
@@ -64,6 +75,11 @@ a.button
 		// 	top: -9em
 	&.fours
 		width: 50vw
+	@media screen and (min-width: 50rem)
+		&.twos
+			width: 50%
+		&.fours
+			width: 25%
 	img
 		width: 100%
 		display: block
