--- a/themes/montana/sass/setup.sass
+++ b/themes/montana/sass/setup.sass
@@ -22,17 +22,81 @@ a
 	color: inherit
 	text-decoration: none
 
+hr
+	clear: both
+	width: 100%
+	border: .1rem solid $gray
+	margin: .5em 0
 
-#wrapper > header
+.max_wrap
+	max-width: 126rem
+	margin: 0 auto
+	width: 100%
+	// overflow: auto
+
+
+
+
+
+// Header
+
+header
 	background: $black
 	padding: 2em
+	max-width: 126rem
+	position: relative
+	margin: 0 auto
+	overflow: auto
+	z-index: 1000
+	.navigation
+		display: none
+		float: right
+		width: 100%
+		padding-left: 10.5em
+		padding-right: 4em
+		position: absolute
+		@media screen and (min-width:50rem)
+			display: block
+		a
+			color: $gray
+		li
+			display: inline-block
 
-header .navigation
-	display: none
-	a
-		color: $white
-	li
+	#site-title
+		float: left
+		&, a
+			display: inline-block
+			line-height: 0
+
+	#search
 		display: inline-block
+		float: right
+		font-size: .8em
+		text-transform: uppercase
+
+	ul.submenu
+		display: inline-block
+		font-size: .8em
+		text-transform: uppercase
+		li
+			margin-right: 1.5em
+
+	nav#menu
+		font-size: 1.2em
+		a
+			color: white
+		ul
+			display: flex
+			justify-content: space-between
+
+
+
+
+
+
+
+
+
 
 
 
@@ -45,12 +109,14 @@ a#nav_toggle_button
 	float: right
 	position: relative
 	padding: .7em 0
-	top: -3em
+	top: 1em
 	&:before
 		content: ''
 		border-top: .25em solid $white
 		width: 100%
 		display: block
+	@media screen and (min-width:50rem)
+		display: none
 
 
 
@@ -77,18 +143,55 @@ footer
 		li
 			display: inline-block
 			margin: 2em 1em
+		@media screen and (min-width: 50rem)
+			padding: 2em
+			overflow: auto
+			form
+				float: left
+			ul.sm_tray
+				display: inline-block
+				float: right
+			li
+				margin: 0 1em
+
+	#foot_nav
+		clear: both
+		border-top: .2rem solid $gray
+		position: relative
+		padding-top: 1.4em
+		top: 2em
+		margin-bottom: 2em
+		display: none
+		a
+			color: $white
+		ul
+			display: flex
+			justify-content: space-between
+		@media screen and (min-width: 50rem)
+			display: block
+
 
 .sitemap
 	background: $black
 	color: $lightgray
 	padding: 2em
 	text-align: center
-	> ul, #copyright
+	@media screen and (min-width: 50rem)
+		overflow: auto
+	ul.links, #copyright
 		width: 50%
 		float: left
 		text-align: left
 		font-size: .8em
 		line-height: 1.6em
 	a#logo_nl
-		margin-top: 3em
-		display: inline-block
+		padding-top: 2em
+		display: block
+		clear: both
+	@media screen and (min-width: 50rem)
+		ul.links, #copyright
+			width: 25%
+		a#logo_nl
+			padding-top: 0
+			float: right
+			clear: none
