--- a/themes/montana/sass/variables.sass
+++ b/themes/montana/sass/variables.sass
@@ -4,6 +4,7 @@ $gray: #818181
 $lightgray: #ababab
 $darkgray: #161616
 $white: white
+$orange: #f57b20
 // $darkbrown: #3E3B30
 // $oxford: #374A6B
 // $blue: #0C7BD5
@@ -16,3 +17,7 @@ $white: white
 
 $shadow: 0 1px 3px 0 rgba(0,0,0,0.2)
 $radius: .5rem
+
+$NewJune: "New June", Helvetica, Arial, sans-serif
+$NewJuneBold: "New June Bold", Helvetica, Arial, sans-serif
+$Helvetica: Helvetica, Arial, sans-serif
