--- a/themes/montana/css/index.css
+++ b/themes/montana/css/index.css
@@ -60,7 +60,7 @@ html, body {
 
 body {
   background: #f7f7f7;
-  font-family: "Helvetica", Arial, sans-serif;
+  font-family: "New June", Helvetica, Arial, sans-serif;
   font-size: 1.4em;
   font-weight: 300;
   color: #1d1d1d; }
@@ -79,6 +79,13 @@ hr {
   max-width: 126rem;
   margin: 0 auto;
   width: 100%; }
+
+ol {
+  list-style: decimal;
+  padding-left: 1.2em; }
+
+strong {
+  font-weight: 700; }
 
 header {
   background: #1d1d1d;
@@ -432,3 +439,68 @@ h2.area_title {
   padding: 1em; }
 .collections .gallery img {
   max-width: 100%; }
+
+.bg_featured_banner {
+  position: relative;
+  width: 100%;
+  height: 40em;
+  background-size: cover;
+  background-position: center; }
+  @media screen and (min-width: 79rem) {
+    .bg_featured_banner {
+      top: -4em; } }
+
+.post_info, .post_meta {
+  padding: 1.6em; }
+
+.max_wrap.post_head {
+  padding: 0 1em;
+  margin-top: -8em;
+  position: relative; }
+
+.post_info {
+  background: white;
+  border: 0.1rem solid #1d1d1d;
+  position: relative; }
+  .post_info h1 {
+    font-size: 2em; }
+  .post_info .label {
+    color: #f57b20; }
+  .post_info .status_label {
+    margin-top: 2em;
+    font-size: 0.8em; }
+    .post_info .status_label.stick {
+      position: absolute;
+      bottom: 1.5em; }
+
+.post_meta {
+  background: #1d1d1d;
+  color: white; }
+  .post_meta li {
+    margin-bottom: 1em; }
+
+@media screen and (min-width: 50rem) {
+  .main_content_column {
+    width: 55%;
+    overflow: auto; }
+
+  .post_meta {
+    width: 45%; }
+
+  .post_meta, .post_info {
+    float: left; } }
+.widget {
+  padding: 1em; }
+  .widget h3 {
+    font-size: 1.2em;
+    font-weight: bold; }
+  .widget iframe {
+    width: 100%; }
+  .widget ol span {
+    float: right; }
+  .widget .body_content {
+    font-family: Helvetica, Arial, sans-serif;
+    color: #818181;
+    padding: 1em 0;
+    font-size: 0.9em;
+    line-height: 1.6em; }
