--- a/themes/montana/sass/local.sass
+++ b/themes/montana/sass/local.sass
@@ -105,10 +105,6 @@ h2.area_title
 
 
 
-
-
-
-
 .collections
 	.controls
 		background: $white
@@ -130,3 +126,85 @@ h2.area_title
 
 	.gallery img
 		max-width: 100%
+
+
+
+
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+// SINGLE
+
+.bg_featured_banner
+	position: relative
+	width: 100%
+	height: 40em
+	background-size: cover
+	background-position: center
+	@media screen and (min-width: 79rem)
+		top: -4em
+
+
+.post_info, .post_meta
+	padding: 1.6em
+
+.max_wrap.post_head
+	padding: 0 1em
+	margin-top: -8em
+	position: relative
+
+.post_info
+	background: $white
+	border: .1rem solid $black
+	position: relative
+	h1
+		font-size: 2em
+	.label
+		color: $orange
+	.status_label
+		margin-top: 2em
+		font-size: .8em
+		&.stick
+			position: absolute
+			bottom: 1.5em
+
+.post_meta
+	background: $black
+	color: $white
+	li
+		margin-bottom: 1em
+
+@media screen and (min-width: 50rem)
+	.main_content_column
+		width: 55%
+		overflow: auto
+	.post_meta
+		width: 45%
+	.post_meta, .post_info
+		float: left
+
+
+.widget
+	padding: 1em
+	h3
+		font-size: 1.2em
+		font-weight: bold
+	iframe
+		width: 100%
+	ol span
+		float: right
+	.body_content
+		font-family: $Helvetica
+		color: $gray
+		padding: 1em 0
+		font-size: 0.9em
+		line-height: 1.6em
