--- a/themes/montana/css/index.css
+++ b/themes/montana/css/index.css
@@ -355,6 +355,7 @@ a.button {
 
 h2.area_title {
   font-size: 1.8em;
+  font-weight: bold;
   text-align: center;
   margin: 1.5em 0 0.5em; }
 
@@ -504,3 +505,53 @@ h2.area_title {
     padding: 1em 0;
     font-size: 0.9em;
     line-height: 1.6em; }
+
+#agenda form {
+  margin: 2em 0; }
+#agenda input, #agenda select {
+  font: inherit;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  border: 0.1rem solid;
+  border-radius: 0;
+  background: white;
+  min-width: 14em;
+  padding: 1em 1em 0.8em;
+  margin-right: 0.8em; }
+#agenda .input_wrap {
+  position: relative;
+  display: inline-block; }
+  #agenda .input_wrap.hoy:before {
+    content: "HOY";
+    font-family: Helvetica;
+    font-weight: bold;
+    position: absolute;
+    z-index: 1;
+    left: 1em;
+    top: 0.85em;
+    border-right: 0.1rem solid;
+    padding: 0.1em 0.4em 0 0; }
+  #agenda .input_wrap.hoy input {
+    padding-left: 4em; }
+#agenda .ag_results h3 {
+  font-size: 1.2em;
+  font-weight: bold; }
+#agenda .ag_results ul {
+  border-top: 0.1rem solid;
+  border-bottom: 0.1rem solid;
+  margin: 1em 0 4em; }
+  #agenda .ag_results ul li {
+    background: white; }
+    #agenda .ag_results ul li:hover {
+      background: #1d1d1d;
+      color: white; }
+    #agenda .ag_results ul li:last-child .max_wrap {
+      border: none; }
+  #agenda .ag_results ul .max_wrap {
+    border-bottom: 0.1rem solid #1d1d1d; }
+    #agenda .ag_results ul .max_wrap > div {
+      display: table-cell;
+      vertical-align: middle;
+      padding: 1em 2em 1em 0; }
+  #agenda .ag_results ul img {
+    display: block; }
