--- a/themes/montana/sass/setup.sass
+++ b/themes/montana/sass/setup.sass
@@ -35,7 +35,7 @@ hr
 	clear: both
 	width: 100%
 	border: .1rem solid $gray
-	margin: .5em 0
+	margin: .5em 0 .75em
 
 .max_wrap
 	max-width: 126rem
@@ -62,7 +62,7 @@ header
 	max-width: 126rem
 	position: relative
 	margin: 0 auto
-	overflow: auto
+	overflow: hidden
 	z-index: 1000
 	.navigation
 		display: none
