--- a/themes/montana/css/index.css
+++ b/themes/montana/css/index.css
@@ -80,6 +80,9 @@ hr {
   margin: 0 auto;
   width: 100%; }
 
+a.max_wrap {
+  display: block; }
+
 ol {
   list-style: decimal;
   padding-left: 1.2em; }
@@ -454,10 +457,12 @@ h2.area_title {
 .post_info, .post_meta {
   padding: 1.6em; }
 
-.max_wrap.post_head {
+.post_head {
   padding: 0 1em;
   margin-top: -8em;
-  position: relative; }
+  margin-bottom: 4em;
+  position: relative;
+  overflow: auto; }
 
 .post_info {
   background: white;
@@ -479,6 +484,9 @@ h2.area_title {
   color: white; }
   .post_meta li {
     margin-bottom: 1em; }
+  .post_meta a.button {
+    border: 0.1rem solid white;
+    padding-top: 0.65em; }
 
 @media screen and (min-width: 50rem) {
   .main_content_column {
@@ -557,5 +565,13 @@ h2.area_title {
       display: table-cell;
       vertical-align: middle;
       padding: 1em 2em 1em 0; }
+      #agenda .ag_results ul .max_wrap > div.schedule {
+        width: 20em; }
+      #agenda .ag_results ul .max_wrap > div.thumbnail {
+        width: 16rem; }
+      #agenda .ag_results ul .max_wrap > div.title {
+        width: 50%; }
   #agenda .ag_results ul img {
-    display: block; }
+    display: block;
+    width: 100%;
+    height: auto; }
