Images where needed

--- a/themes/montana/sass/local.sass
+++ b/themes/montana/sass/local.sass
@@ -51,14 +51,15 @@ h2.area_title
 		position: relative
 		z-index: 14
 		&:after
-			content: url('http://placehold.it/10')
+			content: url(../img/arr_down.svg)
 			border: .2rem solid $white
 			position: absolute
 			right: 2em
 			top: 2.5em
 			+border-radius(50%)
 			width: 2.2rem
-			height: 2.2rem
+			// height: 2.2rem
+			padding-top: .3rem
 			text-align: center
 	ul.stories
 		position: relative
