--- a/themes/montana/sass/local.sass
+++ b/themes/montana/sass/local.sass
@@ -89,6 +89,8 @@ h2.area_title
 			display: inline
 			margin-right: 1em
 			vertical-align: top
+			max-height: 8rem
+			width: auto
 	a
 		color: $white
 	.title
