--- a/themes/montana/css/index.css
+++ b/themes/montana/css/index.css
@@ -287,7 +287,8 @@ a.button {
     font-size: 0.8em;
     padding: 0.25em 0.5em; }
   .details.box h2 {
-    font-size: 2.4em; }
+    font-size: 1.4em;
+    line-height: 1.4em; }
   .details.box .status_label {
     position: absolute;
     bottom: 1em;
@@ -303,8 +304,12 @@ a.button {
   float: left; }
   .card.twos {
     width: 100vw; }
+    .card.twos h2 {
+      font-size: 2.4em; }
   .card.fours {
     width: 50vw; }
+    .card.fours.has-image .details.box {
+      height: 20em; }
   @media screen and (min-width: 50rem) {
     .card.twos {
       width: 50%; }
@@ -312,6 +317,7 @@ a.button {
       width: 25%; } }
   .card img {
     width: 100%;
+    height: auto;
     display: block; }
   .card .details.box {
     min-height: 14em;
@@ -326,7 +332,7 @@ a.button {
       top: inherit;
       bottom: -1em; }
     .card .details.box h2 {
-      margin-bottom: 1em; }
+      margin-bottom: 2em; }
   .card .img_container {
     position: relative;
     right: -1em;
@@ -418,7 +424,9 @@ h2.area_title {
     .dropdown .stories li img, .dropdown .story img {
       display: inline;
       margin-right: 1em;
-      vertical-align: top; }
+      vertical-align: top;
+      max-height: 8rem;
+      width: auto; }
   .dropdown a {
     color: white; }
   .dropdown .title {
