--- a/themes/montana/sass/modules.sass
+++ b/themes/montana/sass/modules.sass
@@ -53,7 +53,8 @@ a.button
 		font-size: .8em
 		padding: .25em .5em
 	h2
-		font-size: 2.4em
+		font-size: 1.4em
+		line-height: 1.4em
 	.status_label
 		position: absolute
 		bottom: 1em
@@ -73,8 +74,12 @@ a.button
 		// 	margin-top: 9em
 		// img
 		// 	top: -9em
+		h2
+			font-size: 2.4em
 	&.fours
 		width: 50vw
+		&.has-image .details.box
+			height: 20em
 	@media screen and (min-width: 50rem)
 		&.twos
 			width: 50%
@@ -82,6 +87,7 @@ a.button
 			width: 25%
 	img
 		width: 100%
+		height: auto
 		display: block
 	.details.box
 		min-height: 14em
@@ -96,7 +102,7 @@ a.button
 			top: inherit
 			bottom: -1em
 		h2
-			margin-bottom: 1em
+			margin-bottom: 2em
 	.img_container
 		position: relative
 		right: -1em
