single view for movie post

--- a/themes/montana/sass/modules.sass
+++ b/themes/montana/sass/modules.sass
@@ -18,9 +18,13 @@ a.button
 
 .excerpt
 	font-family: $Helvetica
+	line-height: 1.4em
 	color: $gray
 	margin-top: 1em
-	line-height: 1.4em
+	img.poster
+		float: left
+		margin-right: 1em
+		max-width: 14em
 
 .status_label
 	font-size: .85em
