--- a/themes/montana/css/index.css
+++ b/themes/montana/css/index.css
@@ -257,8 +257,13 @@ a.button {
 
 .excerpt {
   font-family: Helvetica, Arial, sans-serif;
+  line-height: 1.4em;
   color: #818181;
   margin-top: 1em; }
+  .excerpt img.poster {
+    float: left;
+    margin-right: 1em;
+    max-width: 14em; }
 
 .status_label {
   font-size: 0.85em;
